P4PADEV-1659 fix issues